buildscript {
    dependencies {
        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
    }
}

plugins {
    id "com.github.hierynomus.license" version "0.16.1"
    id 'com.github.sherter.google-java-format' version '0.9'
    id 'net.ltgt.errorprone' version  '3.1.0'
    id 'java-library'
    id 'jacoco'
    id 'com.google.protobuf' version '0.9.4'
    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"  // Nexus publishing
}

ext {
    ossrhUsername = findProperty('ossrhUsername')
    ossrhPassword = findProperty('ossrhPassword')
    signingKeyId = findProperty('signing.keyId')
    signingKey = findProperty('signing.key')
    signingPassword = findProperty('signing.password')
}

repositories {
    maven {
        url 'https://plugins.gradle.org/m2/'
    }
    mavenCentral()
}

apply plugin: 'com.google.protobuf'
apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
apply plugin: 'maven-publish'
apply plugin: 'com.github.sherter.google-java-format'

googleJavaFormat {
    toolVersion '1.19.2'
    include '**/*.java'
    exclude '**/generated-sources/*'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
}

tasks.googleJavaFormat.dependsOn 'licenseFormat'

group = 'com.uber.cadence'

version = getVersion()

def getVersion() {
    try {
        def stdout = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'describe', '--tags'
            standardOutput = stdout
        }
        def gitTag = stdout.toString().trim().replaceFirst("^v", "")
        return gitTag
    } catch (Exception e) {
        return "0.0.0-LOCAL"
    }
}

description = '''Uber Cadence Java Client'''

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    errorprone('com.google.errorprone:error_prone_core:2.23.0')

    api group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
    api group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
    api group: 'com.google.code.gson', name: 'gson', version: '2.10'
    api group: 'com.uber.m3', name: 'tally-core', version: '0.11.1'
    api group: 'com.google.guava', name: 'guava', version: '31.1-jre'
    api group: 'com.cronutils', name: 'cron-utils', version: '9.2.0'
    api group: 'io.micrometer', name: 'micrometer-core', version: '1.10.2'
    api group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '2.1.1'
    api group: 'com.auth0', name: 'java-jwt', version:'3.10.2'
    api group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.9'
    api group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '2.10.0'
    api group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.21.9'
    api group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.35.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'io.grpc:grpc-netty-shaded:1.54.2'
    implementation 'io.grpc:grpc-protobuf:1.54.2'
    implementation 'io.grpc:grpc-stub:1.54.2'

    api("io.opentelemetry:opentelemetry-api:1.19.0")

    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    testImplementation group: 'io.grpc', name: 'grpc-testing', version: '1.54.2'
    testImplementation 'io.opentracing:opentracing-mock:0.33.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
    testImplementation "org.mockito:mockito-inline:4.5.1" // for mocking final classes
}

license {
    header rootProject.file('license-header.txt')
    skipExistingHeaders true
    excludes(["**/*.json", "**/idls","com/uber/cadence/*.java", "com/uber/cadence/shadower/*.java"]) // config files and generated code
}

task printVersion {
    println "current version: $version"
}

task initDlsSubmodule(type: Exec) {
    description = 'Initializes src/main/idls submodule'
    commandLine 'git', 'submodule', 'init'
}

task updateDlsSubmodule(type: Exec) {
    dependsOn initDlsSubmodule
    description = 'Updates src/main/idls submodule'
    commandLine 'git', 'submodule', 'update'
}

sourceSets {
    main {
        proto {
            srcDir 'src/main/idls/proto'
        }
        java {
            srcDir 'src/main'
            srcDir 'src/gen/java'
        }
    }
}

protobuf {
    protoc {
        if (osdetector.os == "osx") {
            artifact = 'com.google.protobuf:protoc:3.25.1:osx-x86_64'
        } else {
            artifact = 'com.google.protobuf:protoc:3.25.1'
        }
    }
    plugins {
        grpc {
            if (osdetector.os == "osx") {
                artifact = 'io.grpc:protoc-gen-grpc-java:1.54.2:osx-x86_64'
            } else {
                artifact = 'io.grpc:protoc-gen-grpc-java:1.54.2'
            }
        }
    }
    generateProtoTasks {
        all().each { task -> task.dependsOn updateDlsSubmodule }
        all()*.plugins {
            grpc {
                outputSubDir = 'java'
            }
        }
    }
}

protobuf {
    generatedFilesBaseDir = "$buildDir/generated-sources/proto"
}
idea {
    module {
        sourceDirs += file("$buildDir/generated/main/java");
        sourceDirs += file("$buildDir/generated/main/grpc");
    }
}

clean {
    delete protobuf.generatedFilesBaseDir
}

compileJava {
    dependsOn 'googleJavaFormat'
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:none' << '-Xlint:deprecation' << '-Werror'
    options.errorprone.excludedPaths = '.*/generated-sources/.*'
    options.errorprone {
        disable('BadImport')
        disable('PreferJavaTimeOverload')
        disable('JavaTimeDefaultTimeZone')
        disable('MutableConstantField')
        disable('CatchFail')
    }
}

compileTestJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:none' << '-Xlint:deprecation' << '-Werror'
    options.errorprone.excludedPaths = '.*/generated-sources/.*'
    options.errorprone {
        disable('BadImport')
        disable('PreferJavaTimeOverload')
        disable('JavaTimeDefaultTimeZone')
        disable('MutableConstantField')
        disable('CatchFail')
    }
}

// Generation version.properties for value to be included into the request header
task createProperties(dependsOn: processResources) {
    doLast {
        def subdir = new File("$buildDir/resources/main/com/uber/cadence/")
        if( !subdir.exists() ) {
            subdir.mkdirs()
        }
        new File("$buildDir/resources/main/com/uber/cadence/version.properties").withWriter { w ->
            Properties p = new Properties()
            p['cadence-client-version'] = project.version.toString()
            p.store w, null
        }
    }
}

classes {
    dependsOn createProperties
}

if (JavaVersion.current().isJava8Compatible()) {
    allprojects {
        tasks.withType(Javadoc) {
            options.addStringOption('Xdoclint:none', '-quiet')
        }
    }
}

javadoc {
    options.encoding = 'UTF-8'
}

task javadocJar(type: Jar) {
    archiveClassifier = 'javadoc'
    from javadoc
}

task sourcesJar(type: Jar, dependsOn: classes) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives javadocJar, sourcesJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact javadocJar
            artifact sourcesJar
            pom {
                name = 'cadence-client'
                description = 'Uber Cadence Java Client'
                url = 'https://github.com/uber-java/cadence-client'
                scm {
                    url = 'https://github.com/uber-java/cadence-client'
                    connection = 'scm:git:git@github.com:uber-java/cadence-client.git/'
                    developerConnection = 'scm:git:git@github.com:uber-java/cadence-client.git/'
                }
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'maxim'
                        name = 'Maxim Fateev'
                        email = 'maxim@uber.com'
                    }
                    developer {
                        id = 'meiliang'
                        name = 'Liang Mei'
                        email = 'meiliang@uber.com'
                    }
                }
            }
        }
    }
    repositories {
        maven {
            credentials {
                username ossrhUsername
                password ossrhPassword
            }
            if(project.version.endsWith('-SNAPSHOT')) {
                url 'https://ossrh-staging-api.central.sonatype.com/content/repositories/snapshots/'
            } else {
                url 'https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/'
            }
        }
    }
}

nexusPublishing {
    repositories {
        sonatype {
            username.set(ossrhUsername)
            password.set(ossrhPassword)
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/content/repositories/snapshots/"))
        }
    }
}

if (signingKeyId) {
    apply plugin: 'signing'
    if (signingKey) { // for CI
        signing {
            useInMemoryPgpKeys(
                signingKeyId,
                signingKey.replace('\\n','\n'),
                signingPassword
            )
            sign configurations.archives
            sign publishing.publications.mavenJava
        }
    } else {
        signing {
            sign configurations.archives
            sign publishing.publications.mavenJava
        }
    }
}

task registerDomain(type:JavaExec) {
    mainClass = 'com.uber.cadence.RegisterTestDomain'
    classpath = sourceSets.test.runtimeClasspath
}

test {
    dependsOn 'registerDomain'
    dependsOn 'licenseMain'
    finalizedBy jacocoTestReport // report is always generated after tests run
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    testLogging {
        events 'passed', 'skipped', 'failed'
        exceptionFormat 'full'
        // Uncomment the following line if you want to see test logs in gradlew run.
        showStandardStreams false
    }
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: ['com/uber/cadence/shadower/*.class', 'com/uber/cadence/*.class'])
        }))
    }
}
